<resources>
    <string name="app_name">Jump</string>
    <string name="tab_workout">Workout</string>
    <string name="tab_stats">Stats</string>
    <string name="placeholder">placeholder</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="jumps">Jumps</string>
    <string name="jumps_placeholder">0</string>
    <string name="duration">Duration</string>
    <string name="duration_placeholder">00:00:00</string>

    <string name="stats_today">Daily stats:</string>
    <string name="stats_week">Weekly stats:</string>
    <string name="stats_lifetime">Lifetime stats:</string>
</resources>